Update test plugin versions and config